# ande-chain

./: .env.example  .env.testnet  .gitignore  ARCHITECTURE_STATUS.md  CLOUDFLARE-SETUP.md  CLOUDFLARE-TOKEN-SETUP.md  COMPATIBILITY_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak2  Cargo.toml.bak3  DECENTRALIZED_CONSENSUS_ACTIVATION_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DOCKER_README.md  Dockerfile  Dockerfile.legacy  FUNCTIONALITY_REVIEW.md  GET-TUNNEL-TOKEN.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE-STATUS.md  INTEGRATION_TEST_REPORT.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  MONITORING_ACCESS.md  MULTI_SEQUENCER_PLAN.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PHASE_1_COMPLETE.md  POST_MIGRATION_STATUS.md  PRODUCTION_VALIDATION_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RECREATION_GUIDE.md  SECURITY_CODE_AUDIT.md  SECURITY_MAINTENANCE_AUDIT.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  SUMMARY.md  TESTNET_DEPLOYMENT.md  (+20 more)
.github/workflows/: ci.yml
bindings/: Cargo.toml
bindings/src/: lib.rs
contracts/: CHANGELOG.md  CLEANUP_SUMMARY.md  DEFI_PRIMITIVES.md  DEPLOYMENT_PRODUCTION_READY.md  DEPLOYMENT_STATUS_CURRENT.md  DEPLOYMENT_STATUS_TESTNET.md  DEPLOY_MANUAL.md  DEPLOY_MISSING_CONTRACTS.sh  Dockerfile  Makefile  PRODUCTION_CONTRACTS.md  README.md  README_CLEANUP.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_IMPLEMENTED.md  UPGRADE_PLAN_V2.md  check_contracts.sh  deploy_manual.sh  foundry.toml  package-lock.json  package.json  remappings.txt  slither-full-report.txt
contracts/archive-old/: SLITHER_CRITICAL_FINDINGS.md
contracts/cache/: solidity-files-cache.json
contracts/deployments/: testnet-6174-production.json  testnet-6174.json
contracts/script/: AuditDeployments.s.sol  DeployANDETokenDuality.s.sol  DeployCore.s.sol  DeployFraudProofs.s.sol  DeployGovernance.s.sol  DeployGovernanceManual.s.sol  DeployGovernanceSimple.s.sol  DeployMock.s.sol  DeploySequencerCoordinator.s.sol  DeployStaking.s.sol
contracts/src/: .gitkeep  ANDETokenDuality.sol  ARCHITECTURE.md  RECENT_CHANGES.md
contracts/src/account/: ANDEPaymaster.sol  BasePaymaster.sol  EntryPoint.sol  README.md  SimpleAccount.sol
contracts/src/bridge/: AndeChainBridge.sol  IBlobstream.sol
contracts/src/community/: CommunityTreasury.sol
contracts/src/consensus/: AndeConsensus.sol
contracts/src/dex/: AndeSwapFactory.sol  AndeSwapLibrary.sol  AndeSwapPair.sol  AndeSwapRouter.sol
contracts/src/fraud-proofs/: AndeDisputeGameFactory.sol  AndeFaultGame.sol  IDisputeGame.sol
contracts/src/gauges/: GaugeController.sol  LiquidityGaugeV1.sol  VotingEscrow.sol
contracts/src/governance/: AndeGovernor.sol  AndeGovernorLite.sol  AndeRollupGovernance.sol  AndeTimelockController.sol
contracts/src/interfaces/: IAndeLend.sol  IAndeSwapCallee.sol  IAndeSwapFactory.sol  IAndeSwapPair.sol  IPriceOracle.sol  IXERC20.sol  IXERC20Lockbox.sol
contracts/src/launchpad/: AndeLaunchpad.sol  AndeTokenFactory.sol
contracts/src/lazybridge/: README.md  (+1 more)
contracts/test/: FraudProofs.t.sol
crates/ande-cli/: Cargo.toml
crates/ande-consensus/: Cargo.toml
crates/ande-consensus/abi/: AndeSequencerCoordinator.json  README.md
crates/ande-consensus/src/: config.rs  contract_client.rs  engine.rs  error.rs  lib.rs  metrics.rs  types.rs  validator_set.rs
crates/ande-evm/: Cargo.toml
crates/ande-evm/src/: config.rs  consensus_config.rs  lib.rs  parallel_executor.rs  precompiles.rs
crates/ande-evm/src/evm_config/: BEST_PRACTICES.md  PRECOMPILE_USAGE.md  ande_evm_factory.rs  ande_precompile_provider.rs  ande_token_duality.rs  e2e_test.rs  executor_factory.rs  factory.rs  integration_test.rs  mod.rs  precompile.rs  precompile_config.rs  precompile_inspector.rs  wrapper.rs
crates/ande-evm/src/mev/: auction.rs  config.rs  detector.rs  distributor.rs  handler.rs  mod.rs  redirect.rs
crates/ande-evm/src/parallel/: executor.rs  mv_memory.rs  scheduler.rs
crates/ande-evm/src/rpc/: txpool.rs
crates/ande-evm/tests/: consensus_tests.rs  integration_consensus_test.rs
crates/ande-network/: Cargo.toml
crates/ande-node/: Cargo.toml
crates/ande-node/src/: consensus_integration.rs  lib.rs  main.rs  metrics.rs
crates/ande-primitives/: Cargo.toml
crates/ande-reth/: Cargo.toml
crates/ande-reth/src/: consensus.rs  executor.rs  lib.rs  main.rs  node.rs
crates/ande-rpc/: Cargo.toml
crates/ande-storage/: Cargo.toml
crates/celestia-uploader/: Cargo.toml  README.md
crates/celestia-uploader/src/: chunker.rs  client.rs  lib.rs  types.rs  uploader.rs  verifier.rs
docs/: BFT_CONSENSUS_INTEGRATION.md  CELESTIA_INTEGRATION_ARCHITECTURE.md  CONTRACTS.md  CUSTOM_RETH_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  EVSTACK_ANALYSIS.md  EXECUTIVE_SUMMARY.md  FEATURES_STATUS.md  FEATURES_SUMMARY.md  GENESIS_CULTURAL_REFERENCES.md  GENESIS_WORKFLOW.md  INFRASTRUCTURE_ROADMAP.md  MEV_HANDLER_ANALYSIS.md  MEV_INTEGRATION_STRATEGY.md  README.md  SECURITY_AUDIT_PRECOMPILE.md  SECURITY_REVIEW_SUMMARY.md
docs/archive/: DIGITAL_DNA_ARCHITECTURE.md  GENESIS_DNA_OPTIONS.md  MAXIMAL_GENESIS_DESIGN.md  README.md
docs/archive-old/: INTEGRACION_COMPLETADA.md  INTEGRATION_STRATEGY_FINAL.md  PLAN_FINAL_INTEGRACION.md  PRECOMPILE_INTEGRATION_FINDINGS.md  PRECOMPILE_INTEGRATION_PLAN.md  PRIME_TIME_RECOMMENDATIONS.md  README.md  REALIDAD_TECNICA_Y_SOLUCION.md
infra/config/: alerts.yml  nginx.conf  prometheus.yml
infra/nginx/: nginx-production.conf
infra/prometheus/: alerts.yml
monitoring/: README.md  haproxy.cfg  prometheus-current.yml  prometheus.yml
scripts/: backup-ande.sh  backup-testnet.sh  build-all.sh  deploy-testnet.sh  deploy-to-server.sh  deploy.sh  generate-genesis-plants.py  generate-genesis-seeds.py  generate-plant-metadata.py  health-check-testnet.sh  load-test.yml  migrate-repos.sh  restart-with-genesis.sh  setup-cloudflare-tunnel.sh  setup-firewall.sh  test-all.sh  test-improvements.sh  test-optimizations.sh
specs/: genesis.json  plantas.md
tests/: Cargo.toml  e2e_integration_test.rs
tests/src/: lib.rs
tools/generate-bindings/: Cargo.toml
(+77 files in other folders)
