[workspace]
resolver = "2"

members = [
    "crates/ande-primitives",
    "crates/ande-consensus",
    "crates/ande-evm",
    "crates/ande-storage",
    "crates/ande-rpc",
    "crates/ande-network",
    "crates/ande-node",
    "crates/ande-cli",
    "crates/celestia-uploader",
    "bindings",
    "tools/generate-bindings",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndeLabs/ande-chain"
homepage = "https://andelabs.io"
authors = ["Ande Labs Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
jsonrpsee-core = "0.24"
jsonrpsee-proc-macros = "0.24"

# Reth dependencies - Using v1.8.2
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2", features = ["node-api", "node"] }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }

# Alloy - Aligned with Reth v1.8.2 (version 1.0.37)
alloy-primitives = { version = "1.0.37", default-features = false }
alloy-sol-types = { version = "1.0.37", default-features = false }
alloy-rlp = { version = "1.0.37", default-features = false }
alloy-rpc-types-engine = { version = "1.0.37", default-features = false }
alloy-eips = { version = "1.0.37", default-features = false }
alloy-consensus = { version = "1.0.37", default-features = false }
alloy-rpc-types-txpool = { version = "1.0.37", default-features = false }
alloy-genesis = { version = "1.0.37", default-features = false }

# REVM
revm = "29.0.1"
revm-precompile = "27.0.0"
revm-handler = "10.0.1"
revm-context-interface = "10.2.0"
revm-interpreter = "15.1.0"

# Internal crates
ande-primitives = { path = "crates/ande-primitives" }
ande-consensus = { path = "crates/ande-consensus" }
ande-evm = { path = "crates/ande-evm" }
ande-storage = { path = "crates/ande-storage" }
ande-rpc = { path = "crates/ande-rpc" }
ande-network = { path = "crates/ande-network" }

# Performance dependencies
jemalloc-ctl = "0.5"
tikv-jemallocator = "0.6"

# Monitoring
prometheus = "0.13"
opentelemetry = "0.24"
opentelemetry_sdk = "0.24"
opentelemetry-otlp = "0.17"
tracing-opentelemetry = "0.25"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Compression for DA
zstd = "0.13"

# Crypto
sha3 = "0.10"
sha2 = "0.10"

# Celestia integration
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
chrono = "0.4"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Development profile - fast compilation
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

# Release profile - balanced optimization
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
incremental = false

# Maximum performance profile - for production builds
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
overflow-checks = false

# Profiling profile - for benchmarking and profiling
[profile.profiling]
inherits = "release"
debug = true
strip = false
overflow-checks = true

# Optimized dependencies even in dev mode
[profile.dev.package."*"]
opt-level = 3


