[package]
name = "ande-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ande-node"
path = "src/main.rs"

[dependencies]
# Internal crates
ande-primitives = { workspace = true }
ande-evm = { workspace = true }
ande-consensus = { workspace = true }
ande-storage = { workspace = true }
ande-rpc = { workspace = true }
ande-network = { workspace = true }

# Reth dependencies for node infrastructure
reth-chainspec = { workspace = true }
reth-node-api = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-primitives = { workspace = true }
reth-transaction-pool = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }

# Core dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }

# Performance
tikv-jemallocator = { workspace = true, optional = true }

[features]
default = []
jemalloc = ["tikv-jemallocator"]
asm-keccak = []
