[package]
name = "ande-reth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "ANDE Chain - Production Reth node with custom precompiles"

[[bin]]
name = "ande-reth"
path = "src/main.rs"

[dependencies]
# Internal crates
ande-evm = { workspace = true }
ande-primitives = { workspace = true }

# Reth node dependencies
reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-node-api = { workspace = true }
reth-chainspec = { workspace = true }
reth-primitives = { workspace = true }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-ethereum-consensus = { workspace = true }
reth-consensus = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.2" }

# Alloy
alloy-primitives = { workspace = true }
alloy-genesis = { workspace = true }
alloy-evm = { workspace = true }

# REVM
revm = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
eyre = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Performance - jemalloc allocator
tikv-jemallocator = { workspace = true }
